# vc-file-upload

./: .cz.toml  .dockerignore  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-release.yml  python-tests.yml  version-bump.yml
docs/: backends.md  library.md
tests/: conftest.py  test_config.py  test_filesystem.py  test_http_request.py  test_storage.py  test_varsome.py
vc_file_upload/: config.py  exception.py  filesystem.py  http_request.py  logging_config.py  storage.py  varsome.py
vc_file_upload/cli/: logger.py  transfer_files.py
